GNOME Bugzilla – Bug 780206
shell: Fix incorrect return type
Last modified: 2017-03-20 12:08:12 UTC
.
Created attachment 348186 [details] [review] shell: Fix incorrect return type Should be a gboolean, not a pointer.
Review of attachment 348186 [details] [review]: Sure, no need to ask for review for these so trivial fixes, just push! :-) Thanks
Attachment 348186 [details] pushed as ebe46b8 - shell: Fix incorrect return type