shell: Fix incorrect return type

Should be a gboolean, not a pointer.

https://bugzilla.gnome.org/show_bug.cgi?id=780206